added the models and the page cards now auto input the user data

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "start": "node server.js",
-    "watch": "nodemon server.js"
+    "watch": "nodemon server.js",
+    "seed": "node seeds/seed.js"
   },
   "name": "technically-speaking",
   "description": "A tech blog for technical thoughts on tech",
