--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express-handlebars": "^6.0.7",
     "express-session": "^1.17.3",
     "mysql2": "^3.1.2",
+    "prettier": "^2.8.4",
     "sequelize": "^6.28.0"
   },
   "scripts": {
