--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
     "express-session": "^1.17.3",
+    "method-override": "^3.0.0",
     "mysql2": "^3.1.2",
     "prettier": "^2.8.4",
     "sequelize": "^6.28.0"
